--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -105,81 +105,39 @@
     <ion-card>
       <ion-card-content>
         <ion-slides pager="true" [options]="slideOpts">
-  
-        <ion-slide>
-        <!--home-->
-          <ion-card id="home">
-            <ion-card-header>
-              <ion-icon name="home"></ion-icon>
-            </ion-card-header>
-  
-            <ion-card-content>
-              <ion-card-title>Home</ion-card-title>
-              <ion-card-subtitle>5/10 completed</ion-card-subtitle>
-            </ion-card-content>
-          </ion-card>            
-  
-        </ion-slide>
-  
-        <ion-slide>
-          <!--home-->
-            <ion-card id="home">
-              <ion-card-header>
-                <ion-icon name="home"></ion-icon>
-              </ion-card-header>
-    
-              <ion-card-content>
-                <ion-card-title>Home</ion-card-title>
-                <ion-card-subtitle>5/10 completed</ion-card-subtitle>
-              </ion-card-content>
-            </ion-card>            
-    
-          </ion-slide>
-  
+          <!--Today-->
           <ion-slide>
-            <!--home-->
-              <ion-card id="home">
+              <ion-card id="today">
                 <ion-card-header>
-                  <ion-icon name="home"></ion-icon>
+                  <ion-icon name="Today"></ion-icon>
                 </ion-card-header>
       
                 <ion-card-content>
-                  <ion-card-title>Home</ion-card-title>
+                  <ion-card-title>Today</ion-card-title>
                   <ion-card-subtitle>5/10 completed</ion-card-subtitle>
                 </ion-card-content>
-              </ion-card>            
-      
+              </ion-card>               
             </ion-slide>
   
-            <ion-slide>
-              <!--home-->
+            <!--categories-->
+          <ion-slide *ngFor="let category of categories; let i = index">      
+  
+            <ion-segment [(ngModel)]="selectCategory">
+              <ion-segment-button (click)="chooseCategory(i); getTasks(i)">
                 <ion-card id="home">
                   <ion-card-header>
-                    <ion-icon name="home"></ion-icon>
+                    <ion-icon name="{{category.icon}}"></ion-icon>
                   </ion-card-header>
-        
+  
                   <ion-card-content>
-                    <ion-card-title>Home</ion-card-title>
+                    <ion-card-title>{{category.name}}</ion-card-title>
                     <ion-card-subtitle>5/10 completed</ion-card-subtitle>
                   </ion-card-content>
                 </ion-card>            
-        
-              </ion-slide>
+            </ion-segment-button>
+          </ion-segment>
   
-              <ion-slide>
-                <!--home-->
-                  <ion-card id="home">
-                    <ion-card-header>
-                      <ion-icon name="home"></ion-icon>
-                    </ion-card-header>
-          
-                    <ion-card-content>
-                      <ion-card-title>Home</ion-card-title>
-                      <ion-card-subtitle>5/10 completed</ion-card-subtitle>
-                    </ion-card-content>
-                  </ion-card>            
-          
-                </ion-slide>
+        </ion-slide>      
   
         </ion-slides>
   
@@ -187,56 +145,78 @@
     </ion-card>
   </div>
 
-  <!--Task List-->
-  <div id="taskList">
-    <ion-card>
-      <ion-card-header>Tasks</ion-card-header>
-
-      <ion-card-content>
-        <ion-list>
-          <ion-item-sliding>        
-            <ion-item>
-              <ion-checkbox></ion-checkbox>
-              <ion-label>TASK name</ion-label>
-            </ion-item>
-        
-            <ion-item-options side="end">
-              <ion-item-option (click)="unread(item)">Delete</ion-item-option>
-            </ion-item-options>
-          </ion-item-sliding>
-
+    <!--Tasks-->
+    <div  id="taskList">
+      <ion-card>
+        <ion-card-content>
+          <ion-list>
+            <ion-item-sliding *ngFor="let currentTask of currentTasks">         
+              <ion-item>
+                <ion-checkbox [(ngModel)]="currentTask.complete" (ionChange)="updateCheckbox(currentTask)"></ion-checkbox>
+                <ion-label>{{currentTask.name}}</ion-label>
+                <h4>{{currentTask.endDate | date:'dd MMM YYYY, HH:mm' }}</h4>
+              </ion-item>
           
-
-        </ion-list>
-
-      </ion-card-content>
-    </ion-card>
-
-  </div>
+              <ion-item-options side="end">
+                <ion-item-option (click)="unread(item)">Delete</ion-item-option>
+              </ion-item-options>
+            </ion-item-sliding>
+          </ion-list>
+  
+        </ion-card-content>
+      </ion-card>
+    </div>
 
   <!--Gamification-->
   <div id="gamificationBox"> 
     <ion-card>
       <ion-card-content>
-        
-        <!--top-->
-        <div>
-          <!--streak & task done-->
-          <div></div>      
+        <ion-grid>
+          <ion-row>
+            <ion-col>
+              <ion-row>
+                <ion-col>
+                  <h5>Streak</h5>
+                  <h2>10 Days</h2>
+                </ion-col>
+              </ion-row>
+    
+              <ion-row>
+                <ion-col>
+                  <h5>Tasks Done</h5>
+                  <h2>2 Tasks</h2>
+                </ion-col>
+              </ion-row>
+            </ion-col>
 
-          <!--circle-->
-          <div></div>
-        </div>
+            <ion-col>
+              circle
+            </ion-col>
+          </ion-row>
 
-        <!--bottom-->
-        <div>
-          <!--day-->
-          <div></div>
-          <!--week-->
-          <div></div>
-          <!--month-->
-          <div></div>
-        </div>
+          <ion-row>
+            <ion-col>
+              <h5>Day</h5>
+              <ion-progress-bar value="0.5"></ion-progress-bar>
+              <h5>Day</h5>
+            </ion-col>
+
+            <ion-col>
+              <h5>Day</h5>
+              <ion-progress-bar value="0.5"></ion-progress-bar>
+              <h5>Day</h5>
+            </ion-col>
+
+            <ion-col>
+              <h5>Day</h5>
+              <ion-progress-bar value="0.5"></ion-progress-bar>
+              <h5>Day</h5>
+            </ion-col>
+
+          </ion-row>
+          
+        </ion-grid>  
+      
       </ion-card-content>
     </ion-card>
 
@@ -327,138 +307,118 @@
     <ion-card>
       <ion-card-content>
         <ion-slides pager="true" [options]="slideOpts">
-  
-        <ion-slide>
-        <!--home-->
-          <ion-card id="home">
-            <ion-card-header>
-              <ion-icon name="home"></ion-icon>
-            </ion-card-header>
-  
-            <ion-card-content>
-              <ion-card-title>Home</ion-card-title>
-              <ion-card-subtitle>5/10 completed</ion-card-subtitle>
-            </ion-card-content>
-          </ion-card>            
-  
-        </ion-slide>
-  
-        <ion-slide>
-          <!--home-->
-            <ion-card id="home">
-              <ion-card-header>
-                <ion-icon name="home"></ion-icon>
-              </ion-card-header>
-    
-              <ion-card-content>
-                <ion-card-title>Home</ion-card-title>
-                <ion-card-subtitle>5/10 completed</ion-card-subtitle>
-              </ion-card-content>
-            </ion-card>            
-    
-          </ion-slide>
-  
+          <!--Today-->
           <ion-slide>
-            <!--home-->
-              <ion-card id="home">
+              <ion-card id="today">
                 <ion-card-header>
-                  <ion-icon name="home"></ion-icon>
+                  <ion-icon name="Today"></ion-icon>
                 </ion-card-header>
       
                 <ion-card-content>
-                  <ion-card-title>Home</ion-card-title>
+                  <ion-card-title>Today</ion-card-title>
                   <ion-card-subtitle>5/10 completed</ion-card-subtitle>
                 </ion-card-content>
-              </ion-card>            
-      
+              </ion-card>               
             </ion-slide>
-  
-            <ion-slide>
-              <!--home-->
+
+            <!--categories-->
+          <ion-slide *ngFor="let category of categories; let i = index">      
+
+            <ion-segment [(ngModel)]="selectCategory">
+              <ion-segment-button (click)="chooseCategory(i); getTasks(i)">
                 <ion-card id="home">
                   <ion-card-header>
-                    <ion-icon name="home"></ion-icon>
+                    <ion-icon name="{{category.icon}}"></ion-icon>
                   </ion-card-header>
-        
+
                   <ion-card-content>
-                    <ion-card-title>Home</ion-card-title>
+                    <ion-card-title>{{category.name}}</ion-card-title>
                     <ion-card-subtitle>5/10 completed</ion-card-subtitle>
                   </ion-card-content>
                 </ion-card>            
-        
-              </ion-slide>
-  
-              <ion-slide>
-                <!--home-->
-                  <ion-card id="home">
-                    <ion-card-header>
-                      <ion-icon name="home"></ion-icon>
-                    </ion-card-header>
-          
-                    <ion-card-content>
-                      <ion-card-title>Home</ion-card-title>
-                      <ion-card-subtitle>5/10 completed</ion-card-subtitle>
-                    </ion-card-content>
-                  </ion-card>            
-          
-                </ion-slide>
-  
+            </ion-segment-button>
+          </ion-segment>
+
+        </ion-slide>      
+
         </ion-slides>
-  
+
       </ion-card-content>
     </ion-card>
   </div>
 
-  <!--Task List-->
-  <div id="taskList">
+  <!--Tasks-->
+  <div  id="taskList">
     <ion-card>
-      <ion-card-header>Tasks</ion-card-header>
-
       <ion-card-content>
         <ion-list>
-          <ion-item-sliding>        
+          <ion-item-sliding *ngFor="let currentTask of currentTasks">         
             <ion-item>
-              <ion-checkbox></ion-checkbox>
-              <ion-label>TASK name</ion-label>
+              <ion-checkbox [(ngModel)]="currentTask.complete" (ionChange)="updateCheckbox(currentTask)"></ion-checkbox>
+              <ion-label>{{currentTask.name}}</ion-label>
+              <h4>{{currentTask.endDate | date:'dd MMM YYYY, HH:mm' }}</h4>
             </ion-item>
         
             <ion-item-options side="end">
               <ion-item-option (click)="unread(item)">Delete</ion-item-option>
             </ion-item-options>
           </ion-item-sliding>
-
-          
-
         </ion-list>
 
       </ion-card-content>
     </ion-card>
-
   </div>
 
   <!--Gamification-->
   <div id="gamificationBox"> 
     <ion-card>
       <ion-card-content>
-        
-        <!--top-->
-        <div>
-          <!--streak & task done-->
-          <div></div>      
+        <ion-grid>
+          <ion-row>
+            <ion-col>
+              <ion-row>
+                <ion-col>
+                  <h5>Streak</h5>
+                  <h2>10 Days</h2>
+                </ion-col>
+              </ion-row>
+    
+              <ion-row>
+                <ion-col>
+                  <h5>Tasks Done</h5>
+                  <h2>2 Tasks</h2>
+                </ion-col>
+              </ion-row>
+            </ion-col>
 
-          <!--circle-->
-          <div></div>
-        </div>
+            <ion-col>
+              circle
+            </ion-col>
+          </ion-row>
 
-        <!--bottom-->
-        <div>
-          <!--day-->
-          <div></div>
-          <!--week-->
-          <div></div>
-          <!--month-->
-          <div></div>
-        </div>
+          <ion-row>
+            <ion-col>
+              <h5>Day</h5>
+              <ion-progress-bar value="0.5"></ion-progress-bar>
+              <h5>Day</h5>
+            </ion-col>
+
+            <ion-col>
+              <h5>Day</h5>
+              <ion-progress-bar value="0.5"></ion-progress-bar>
+              <h5>Day</h5>
+            </ion-col>
+
+            <ion-col>
+              <h5>Day</h5>
+              <ion-progress-bar value="0.5"></ion-progress-bar>
+              <h5>Day</h5>
+            </ion-col>
+
+          </ion-row>
+          
+        </ion-grid>  
+      
       </ion-card-content>
     </ion-card>
 
